[tool.poetry]
name = "pytheory"
version = "1.0.0"
description = "Fork"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytuning = "^0.7.2"
numeral = "^0.1.0"
pygame = "^1.9"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
